--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "RS-School task",
   "main": "index.ts",
+  "engines": {
+    "node": "20.0.0"
+  },
   "scripts": {
     "start": "node index.ts",
     "start:dev": "nodemon"
@@ -19,6 +22,7 @@
     "@types/dotenv-webpack": "^7.0.7",
     "@types/node": "^20.11.10",
     "@types/webpack": "^5.28.5",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "dotenv": "^16.4.1",
