--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
     "ts-loader": "^9.5.1",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
